[project]
name = "texas-holdem-mvp"
version = "0.1.0"
description = "Online Texas Hold'em MVP with server-authoritative poker logic."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
  "websockets>=12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
